fix: hide horizontal scroll bar

--- a/src/app.css
+++ b/src/app.css
@@ -1,11 +1,10 @@
 :root{
     background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
     color: white;
-    
+   
     html, body{
-    margin: 0;
-    padding: 0;
-    border: 0;
+    margin: 0px 0px 0px 0px;
+        overflow-x: hidden;
     }
 
     
